# sm75-tensorcore-microkernel

./: .gitignore  CMakeLists.txt  LICENSE  READEME.md  README.md  tuning_results.csv  wmma_generated.ptx
benchmarks/: benchmark.cu
kernels/: gemm_shared_fp16.cu  gemm_wmma_fp16.cu  mma_kernel.ptx
scripts/: plot.sh  tune.sh
